--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "graphql-scalars": "^1.13.6",
     "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0"
   },
