--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "graphql": "^16.0.1",
     "graphql-scalars": "^1.13.6",
     "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
